--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -119,11 +119,18 @@ h1, h2, .text-light{
     header{
 
         height: 100vh;
+        padding-top: 1rem;
     }
 
     .header__socials, .scroll__down{
 
         display: none;
+    }
+
+    .cta {
+        display: flex;
+        gap: 1.2rem;
+        justify-content: center;
     }
 
 }
