--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -108,7 +108,21 @@ h1, h2, .text-light{
     header{
 
         height: 60vh;
+        padding-top: 0;
     }
+
+    .header__socials, .scroll__down{
+
+        display: none;
+    }
+
+    .cta {
+        display: flex;
+        gap: 1.2rem;
+        justify-content: center;
+        margin-top: 0;
+    }
+
 
 }
 
