--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -108,21 +108,7 @@ h1, h2, .text-light{
     header{
 
         height: 60vh;
-        padding-top: 0;
     }
-
-    .header__socials, .scroll__down{
-
-        display: none;
-    }
-
-    .cta {
-        display: flex;
-        gap: 1.2rem;
-        justify-content: center;
-        margin-top: 0;
-    }
-
 
 }
 
@@ -132,8 +118,8 @@ h1, h2, .text-light{
 
     header{
 
-        height: 60vh;
-        padding-top: 0;
+        height: 100vh;
+        padding-top: 1rem;
     }
 
     .header__socials, .scroll__down{
@@ -145,7 +131,6 @@ h1, h2, .text-light{
         display: flex;
         gap: 1.2rem;
         justify-content: center;
-        margin-top: 0;
     }
 
 }
