--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -45,6 +45,10 @@
     color: white;
 }
 
+.portfolio__item:hover .description{
+    color: #015994;
+}
+
 .project{
     border-color: white;
     color: white;
